docs: doc site styling for increasing sidebar width to prevent text cutoff (#609)

--- a/site/.vitepress/theme/style.css
+++ b/site/.vitepress/theme/style.css
@@ -12,7 +12,7 @@
  *
  * Each colors have exact same color scale system with 3 levels of solid
  * colors with different brightness, and 1 soft color.
- * 
+ *
  * - `XXX-1`: The most solid color used mainly for colored text. It must
  *   satisfy the contrast ratio against when used on top of `XXX-soft`.
  *
@@ -167,4 +167,12 @@
 
 .transparent-text-fill {
   -webkit-text-fill-color: transparent;
+}
+
+/**
+ * Component: Sidebar
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-sidebar-width: 360px;
 }
